--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@degon/admin-component-vue3": "^1.6.10",
     "@degon/http-request": "^0.0.2",
+    "@element-plus/icons": "^0.0.11",
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.26.1",
     "element-plus": "^2.1.4",
