--- a/.env.development
+++ b/.env.development
@@ -7,4 +7,5 @@ VUE_APP_BASE_PATH = 'admin'
 VUE_APP_DOMAIN = http://ad.maissy.net
 VUE_APP_API_BASE = http://api.ad.maissy.net/
 VUE_APP_API = http://api.ad.maissy.net/admin/
-VUE_APP_API = http://frp.chwech.com/
+# VUE_APP_API = http://frp.chwech.com/
+VUE_APP_API = /api/
